# grumpyplayer

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  audiodevice.cpp  audiodevice.h  chrono.h  curl.cpp  curl.h  filesystem.h  gui.cpp  gui.h  icon.cpp  icon.h  logger.cpp  logger.h  main.cpp  mediadecoder.cpp  mediadecoder.h  mediaformat.h  numeric.h  player.cpp  player.h  playertime.h  precomp.h  profiler.cpp  profiler.h  result.h  scopeguard.h  stats.cpp  stats.h  stringext.h  subtitle.cpp  subtitle.h  uri.h  videodevice.cpp  videodevice.h
.github/: pull_request_template.md
doc/: ass-specs.doc
